--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,7 @@ button {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  text-align: center;
   color: #2e2f42;
 }
 
@@ -137,7 +138,9 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
 }
+
 
 .portfolio-title {
   font-size: 20px;
@@ -157,12 +160,14 @@ button {
   background-color: #2e2f42;
 }
 
-.footer-logo {
+.footer .logo {
   color: #f4f4fd;
 }
 
 .footer-text {
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #f4f4fd;
 }
+
